# mfc-config-loader

./: .config.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
src/configloader/: __init__.py  configloader.py
tests/configloader/: test_configloader.py
